test/invalid-syntax/string/invalid-unicode-escape.djs
very foo is '\u000009'
